Init home page and section project

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,7 @@
   "terminal.integrated.fontSize": 14,
   "editor.glyphMargin": false,
   "workbench.activityBar.location": "hidden",
-  "editor.lineNumbers": "off",
+  "editor.lineNumbers": "on",
   "files.eol": "\n", // Final de linha sempre será LF
   // 🛠 Formatação e Lint
   "editor.defaultFormatter": "esbenp.prettier-vscode",
